Bug 109624 - [CI][SHARDS] igt@kms_color@* - dmesg-warn / dmesg-fail - *ERROR* mismatch in gamma_mode (expected 0xc0000001, found 0x00000001)
Summary: [CI][SHARDS] igt@kms_color@* - dmesg-warn / dmesg-fail - *ERROR* mismatch in ...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: highest normal
Assignee: Uma Shankar
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-13 21:53 UTC by Martin Peres
Modified: 2019-02-28 15:37 UTC (History)
1 user (show)

See Also:
i915 platform: ICL
i915 features: display/color management


Attachments

Description Martin Peres 2019-02-13 21:53:36 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb6/igt@kms_color@pipe-c-ctm-0-25.html

<3> [27.884366] [drm:pipe_config_err [i915]] *ERROR* mismatch in gamma_mode (expected 0xc0000001, found 0x00000001)
<4> [27.884466] ------------[ cut here ]------------
<4> [27.884468] pipe state doesn't match!
<4> [27.884559] WARNING: CPU: 7 PID: 1080 at drivers/gpu/drm/i915/intel_display.c:12495 intel_atomic_commit_tail+0xe48/0xeb0 [i915]
<4> [27.884562] Modules linked in: snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic x86_pkg_temp_thermal coretemp crct10dif_pclmul i915 crc32_pclmul snd_hda_intel snd_hda_codec ghash_clmulni_intel snd_hwdep snd_hda_core e1000e cdc_ether usbnet mii ptp snd_pcm pps_core i2c_i801 mei_me mei prime_numbers
<4> [27.884582] CPU: 7 PID: 1080 Comm: kms_color Not tainted 5.0.0-rc6-CI-CI_DRM_5598+ #1
<4> [27.884585] Hardware name: Intel Corporation Ice Lake Client Platform/IceLake U DDR4 SODIMM PD RVP, BIOS ICLSFWR1.R00.2402.AD3.1810170014 10/17/2018
<4> [27.884624] RIP: 0010:intel_atomic_commit_tail+0xe48/0xeb0 [i915]
<4> [27.884628] Code: b6 44 24 18 e9 59 f7 ff ff e8 f4 41 e2 e0 0f 0b e9 79 f7 ff ff e8 e8 41 e2 e0 0f 0b 0f b6 0c 24 e9 7e fc ff ff e8 d8 41 e2 e0 <0f> 0b e9 e8 f7 ff ff e8 cc 41 e2 e0 0f 0b 49 8b 44 24 50 e9 ea fc
<4> [27.884633] RSP: 0018:ffffc90000cdfae8 EFLAGS: 00010286
<4> [27.884637] RAX: 0000000000000000 RBX: ffff88849dc5ca88 RCX: 0000000000000000
<4> [27.884640] RDX: 0000000000000000 RSI: ffffffff8212e7aa RDI: 00000000ffffffff
<4> [27.884642] RBP: ffff8884ab1e0958 R08: 000000002799be38 R09: 0000000000000000
<4> [27.884644] R10: ffff8884ab1e4d80 R11: 0000000000000000 R12: ffff8884ab1e4a88
<4> [27.884646] R13: ffff8884ab1e5d28 R14: ffff88849dc40758 R15: ffff88849dc40000
<4> [27.884648] FS:  00007f6372235980(0000) GS:ffff8884affc0000(0000) knlGS:0000000000000000
<4> [27.884650] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [27.884652] CR2: 000055c45f967000 CR3: 00000004907aa001 CR4: 0000000000760ee0
<4> [27.884654] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
<4> [27.884658] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
<4> [27.884661] PKRU: 55555554
<4> [27.884665] Call Trace:
<4> [27.884711]  intel_atomic_commit+0x244/0x330 [i915]
<4> [27.884719]  drm_atomic_helper_set_config+0x7b/0x90
<4> [27.884723]  drm_mode_setcrtc+0x18e/0x6d0
<4> [27.884739]  ? drm_mode_getcrtc+0x180/0x180
<4> [27.884743]  drm_ioctl_kernel+0x83/0xf0
<4> [27.884749]  drm_ioctl+0x2f3/0x3b0
<4> [27.884753]  ? drm_mode_getcrtc+0x180/0x180
<4> [27.884762]  ? lockdep_hardirqs_on+0xe0/0x1b0
<4> [27.884768]  do_vfs_ioctl+0xa0/0x6e0
<4> [27.884771]  ? lock_acquire+0xa6/0x1c0
<4> [27.884776]  ? __task_pid_nr_ns+0xb9/0x1f0
<4> [27.884781]  ksys_ioctl+0x35/0x60
<4> [27.884786]  __x64_sys_ioctl+0x11/0x20
<4> [27.884789]  do_syscall_64+0x55/0x190
<4> [27.884794]  entry_SYSCALL_64_after_hwframe+0x49/0xbe
<4> [27.884797] RIP: 0033:0x7f63715475d7
<4> [27.884800] Code: b3 66 90 48 8b 05 b1 48 2d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 81 48 2d 00 f7 d8 64 89 01 48
<4> [27.884802] RSP: 002b:00007fffa888adf8 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
<4> [27.884805] RAX: ffffffffffffffda RBX: 00007fffa888ae30 RCX: 00007f63715475d7
<4> [27.884807] RDX: 00007fffa888ae30 RSI: 00000000c06864a2 RDI: 0000000000000005
<4> [27.884809] RBP: 00007fffa888ae30 R08: 0000000000000000 R09: 000056217a3e58b8
<4> [27.884811] R10: 000056217a3e58d8 R11: 0000000000000246 R12: 00000000c06864a2
<4> [27.884813] R13: 0000000000000005 R14: 0000000000000000 R15: 0000000000000000
<4> [27.884822] irq event stamp: 100734
<4> [27.884825] hardirqs last  enabled at (100733): [<ffffffff8112270e>] console_unlock+0x3fe/0x600
<4> [27.884828] hardirqs last disabled at (100734): [<ffffffff810019b0>] trace_hardirqs_off_thunk+0x1a/0x1c
<4> [27.884831] softirqs last  enabled at (100718): [<ffffffff81c0033a>] __do_softirq+0x33a/0x4b9
<4> [27.884835] softirqs last disabled at (100711): [<ffffffff810b5101>] irq_exit+0xd1/0xe0
<4> [27.884872] WARNING: CPU: 7 PID: 1080 at drivers/gpu/drm/i915/intel_display.c:12495 intel_atomic_commit_tail+0xe48/0xeb0 [i915]
<4> [27.884874] ---[ end trace 84775369f562d78f ]---
Comment 1 CI Bug Log 2019-02-13 21:54:25 UTC
The CI Bug Log issue associated to this bug has been updated.

### New filters associated

* ICL: igt@kms_color@* - dmesg-warn / dmesg-fail - *ERROR* mismatch in gamma_mode (expected 0xc0000001, found 0x00000001)
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb1/igt@kms_color@pipe-b-ctm-0-75.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb1/igt@kms_color@pipe-c-ctm-max.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb1/igt@kms_color@pipe-c-gamma.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb3/igt@kms_color@pipe-b-ctm-max.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb4/igt@kms_color@pipe-b-ctm-0-25.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb5/igt@kms_color@pipe-c-ctm-negative.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb5/igt@kms_color@pipe-c-ctm-red-to-blue.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb5/igt@kms_color@pipe-b-ctm-green-to-red.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb6/igt@kms_color@pipe-c-ctm-0-25.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb6/igt@kms_color@pipe-c-ctm-blue-to-red.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb6/igt@kms_color@pipe-c-ctm-0-75.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb6/igt@kms_color@pipe-b-ctm-0-5.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb7/igt@kms_color@pipe-b-gamma.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb7/igt@kms_color@pipe-c-ctm-max.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb7/igt@kms_color@pipe-b-ctm-negative.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb1/igt@kms_color@pipe-c-ctm-0-75.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb1/igt@kms_color@pipe-b-ctm-0-75.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb3/igt@kms_color@pipe-c-ctm-max.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb3/igt@kms_color@pipe-b-gamma.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb3/igt@kms_color@pipe-c-ctm-0-25.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb4/igt@kms_color@pipe-c-ctm-negative.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb4/igt@kms_color@pipe-c-ctm-0-5.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb4/igt@kms_color@pipe-b-ctm-green-to-red.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb4/igt@kms_color@pipe-c-ctm-red-to-blue.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb5/igt@kms_color@pipe-b-ctm-0-5.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb5/igt@kms_color@pipe-b-ctm-negative.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb6/igt@kms_color@pipe-c-ctm-blue-to-red.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb6/igt@kms_color@pipe-b-ctm-max.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb7/igt@kms_color@pipe-b-ctm-0-25.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb7/igt@kms_color@pipe-c-gamma.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb7/igt@kms_color@pipe-c-ctm-green-to-red.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb1/igt@kms_color@pipe-b-ctm-0-5.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb1/igt@kms_color@pipe-b-ctm-green-to-red.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb3/igt@kms_color@pipe-c-ctm-0-75.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb3/igt@kms_color@pipe-b-ctm-max.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb3/igt@kms_color@pipe-c-ctm-red-to-blue.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb4/igt@kms_color@pipe-c-ctm-negative.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb4/igt@kms_color@pipe-c-ctm-max.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb4/igt@kms_color@pipe-c-gamma.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb5/igt@kms_color@pipe-b-ctm-0-75.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb5/igt@kms_color@pipe-b-ctm-negative.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb7/igt@kms_color@pipe-c-ctm-0-25.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb7/igt@kms_color@pipe-b-gamma.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb7/igt@kms_color@pipe-c-ctm-blue-to-red.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb7/igt@kms_color@pipe-b-ctm-0-25.html
Comment 2 CI Bug Log 2019-02-13 22:05:26 UTC
The CI Bug Log issue associated to this bug has been updated.

### New filters associated

* ICL: igt@runner@aborted - fail - Previous test: kms_color
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb3/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb4/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb6/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb6/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb6/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb6/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb7/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb7/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_5598/shard-iclb7/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb3/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb3/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb3/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb4/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb4/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb4/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb4/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb6/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb6/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb7/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb7/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/IGT_4824/shard-iclb7/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb1/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb3/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb3/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb3/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb4/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb4/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb4/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb5/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb7/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb7/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb7/igt@runner@aborted.html
  - https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_12213/shard-iclb7/igt@runner@aborted.html
Comment 3 Jani Saarinen 2019-02-14 06:27:06 UTC
Assigned to Uma to explain.
Comment 4 Martin Peres 2019-02-20 13:26:17 UTC
Bumping the priority because it prevents the execution of a lot of tests (~30% on ICL shards right now).
Comment 5 Martin Peres 2019-02-20 13:27:52 UTC
Uma, please work on this *right now* to fix the situation as this bug massively reduces our test coverage which will lead to plenty of regressions :s
Comment 6 Uma Shankar 2019-02-20 18:15:10 UTC
I have figured out the reason for this mismatch and apparent warning. It is due to mask not correctly updated which is used for masking during state readout. Though the registers were programmed correctly, this mask was not updated and it was masking the 30 and 31st bit. Hence the mismatch was coming. 

I have floated the patch with this fix. 
https://patchwork.freedesktop.org/patch/287132/
Comment 7 Uma Shankar 2019-02-21 02:43:46 UTC
Ville has asked to drop the mask altogether. Below is the latest patch as per Ville's recommendation:
https://patchwork.freedesktop.org/patch/287133/
Comment 8 Ville Syrjala 2019-02-21 13:49:30 UTC
commit 2a3902bd5c14a4946739c9da14071f5aa6e85549
Author: Uma Shankar <uma.shankar@intel.com>
Date:   Thu Feb 21 00:35:19 2019 +0530

    drm/i915/icl: Drop redundant gamma mode mask
Comment 9 Martin Peres 2019-02-28 15:37:31 UTC
(In reply to Ville Syrjala from comment #8)
> commit 2a3902bd5c14a4946739c9da14071f5aa6e85549
> Author: Uma Shankar <uma.shankar@intel.com>
> Date:   Thu Feb 21 00:35:19 2019 +0530
> 
>     drm/i915/icl: Drop redundant gamma mode mask

Thanks, this fixed it!
Comment 10 CI Bug Log 2019-02-28 15:37:54 UTC
The CI Bug Log issue associated to this bug has been archived.

New failures matching the above filters will not be associated to this bug anymore.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.